# QMLAircraftMFD

./: .gitignore  CMakeLists.txt  Main.qml  entitymodel.cpp  entitymodel.h  main.cpp  mainwindow.cpp  mainwindow.h  qml.qrc
modelDefinitions/: generateAbstractListModel.py  models.xml
scripts/: PositionCalculator.js
src/: enginemodel.cpp  enginemodel.h  enginesmodel.cpp  enginesmodel.h  entitymodel.cpp  entitymodel.h  entityutils.cpp  entityutils.h  fuelmodel.cpp  fuelmodel.h  fueltankmodel.cpp  fueltankmodel.h  main.cpp  ownshipmodel.cpp  ownshipmodel.h  weaponstationmodel.cpp  weaponstationmodel.h
ui/: AircraftMFD.qml  Cockpit.qml  ControlWindow.qml  CustomButton.qml  EnginePage.qml  EntityControl.qml  FuelPage.qml  HydPage.qml  MapDisplay.qml  NavPage.qml  OwnshipControl.qml  RadarPage.qml  SensorPage.qml  StorePage.qml  TemplatePage.qml  map.qml
ui/fuelWidgets/: FuelTankDisplay.qml
ui/storesWidgets/: WeaponStationDisplay.qml
